# SpectralMC

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  EFFECT_MIGRATION.md  GTX_970_COMPATIBILITY_INVESTIGATION.md  PHASE1_MYPY_FIXES_PROGRESS.md  README.md  SPECTRALMC_COMPLETION_PLAN.md  STYLE_GUIDE.md  build_and_run_unit_tests.sh  codex.yaml  pyproject.binary.toml  pyproject.source.toml  pyproject.toml  pyproject.toml.backup
docker/: .dockerignore  Dockerfile  Dockerfile.binary.backup  Dockerfile.source  Dockerfile.source.backup  constraints-source.txt  detect_gpu_and_build.sh  docker-compose.yml
docs/: DEPLOYMENT.md  GPU_BUILD_TROUBLESHOOTING.md  TRAINING_INTEGRATION.md  deep_complex_valued_set_encoders.md  imaginary_numbers_unified_intuition.md  methodology_review.md  whitepaper.md
documents/: README.md  documentation_standards.md  functional_refactoring_plan.md  gpu_build_troubleshooting.md  testing-architecture.md  testing_architecture.md  training_integration.md
documents/domain/: index.md
documents/domain/whitepapers/: characteristic_function_for_stochastic_processes.md  deep_complex_valued_set_encoders.md  imaginary_numbers_unified_intuition.md  methodology_review.md  spectralmc_whitepaper.md  variable_length_cvnn_inputs.md
documents/engineering/: PURITY_MIGRATION_PLAN.md  README.md  architecture.md  blockchain_storage.md  build_artifact_management.md  code_formatting.md  code_quality.md  coding_standards.md  command_reference.md  cpu_gpu_compute_policy.md  development_workflow.md  docker.md  docker_build_philosophy.md  docker_workflow.md  documentation_standards.md  effect_interpreter.md  effect_patterns.md  functional_programming.md  gpu_build.md  immutability_doctrine.md  index.md  monitoring_and_alerting.md  observability.md  project_patterns.md  purity_doctrine.md  purity_enforcement.md  pydantic_patterns.md  pytorch_facade.md  reproducibility_proofs.md  testing.md  testing_architecture.md  testing_requirements.md  tla.md  total_pure_modelling.md  type_safety.md  type_stubs.md  user_automation_reference.md  warnings_policy.md
documents/engineering_standards/: style_guide.md
documents/product/: deployment.md  index.md  notebook_content_summary.md  training_integration.md
documents/whitepapers/: characteristic_function_for_stochastic_processes.md  deep_complex_valued_set_encoders.md  imaginary_numbers_unified_intuition.md  methodology_review.md  spectralmc_whitepaper.md  variable_length_cvnn_inputs.md
examples/: README.md  blockchain_integrity_check.py  blockchain_storage_basic.py  checkpoint_training_example.py  inference_client_pinned.py  inference_client_tracking.py  training_with_blockchain_storage.py
notebooks/: SDE_Simulation_with_CuPy.ipynb  async_normals.ipynb  bs_sampling_test.ipynb  cvnn.ipynb  discrete fourier transform.ipynb  discrete_fourier_transform.ipynb  error_investigation.ipynb  gbm.ipynb  sobol_sampler.ipynb  test_gbm_train.ipynb
notebooks/logs/tb_run_20250513_164326/: events.out.tfevents.1747154606.aa23e8730fbb.1249.0
notebooks/logs/tb_run_20250513_164431/: events.out.tfevents.1747154671.aa23e8730fbb.1340.0
notebooks/logs/tb_run_20250513_164603/: events.out.tfevents.1747154763.aa23e8730fbb.1433.0
python/spectralmc/: __init__.py  async_normals.py  black_scholes.py  cvnn.py  gbm.py  immutable_base_model.py  sde.py  sde_simulation.py  sobol_sampler.py  test_async_normals.py  test_cvnn.py  test_sobol_sampler.py  tests.py
python/stubs/cupy/: __init__.pyi
python/stubs/numba/: __init__.pyi
scripts/: build_and_run_unit_tests.sh  install_docker_cuda.sh  verify_docker_cuda.sh  verify_gpu_build.sh
src/spectralmc/: __init__.py  async_normals.py  cvnn.py  cvnn_factory.py  gbm.py  gbm_trainer.py  quantlib.py  result.py  sobol_sampler.py  test_runner.py  testing.py  validation.py
src/spectralmc/effects/: __init__.py  composition.py  errors.py  gpu.py  interpreter.py  logging.py  metadata.py  mock.py  montecarlo.py  registry.py  rng.py  storage.py  training.py  types.py
src/spectralmc/errors/: __init__.py  async_normals.py  cvnn_factory.py  gbm.py  numerical.py  sampler.py  serialization.py  storage.py  (+2 more)
stubs/aioboto3/: __init__.pyi
stubs/cupy/: __init__.pyi
stubs/safetensors/: __init__.pyi  torch.pyi
stubs/spectralmc_proto/: __init__.pyi  common_pb2.pyi  models_pb2.pyi  simulation_pb2.pyi  tensors_pb2.pyi  training_pb2.pyi
stubs/torch/: __init__.pyi
tests/: __init__.py  conftest.py  test_async_normals.py  test_check_pyproject.py  test_cvnn.py  test_cvnn_collect.py  test_cvnn_factory.py  test_gbm.py  test_gbm_trainer.py  test_gpu_memory.py  test_misc.py  test_models_cpu_gpu_transfer.py  test_models_cpu_transfer.py  test_models_torch.py  test_sobol_sampler.py
tests/helpers/: __init__.py  assertions.py  constants.py  dtype_constants.py  factories.py  fixtures.py  result_utils.py
tests/test_e2e/: __init__.py  test_full_stack_cvnn_pricer.py  test_storage_workflow.py  test_training_checkpoint.py
tests/test_effects/: __init__.py  test_composition.py  test_effect_types.py  test_mock_interpreter.py
tests/test_integrity/: __init__.py  test_blockchain_integrity.py
tests/test_serialization/: test_common_converters.py  test_simulation_converters.py  test_tensor_converters.py
tests/test_storage/: test_atomic_cas.py  test_audit_log.py  test_chain.py  test_cli.py  test_context_manager.py  test_e2e_storage.py  test_fast_forward.py  test_gc.py  test_inference_client.py  test_retry_logic.py  test_rollback.py  test_store.py  test_tensorboard.py  test_training_integration.py
tests/test_tools/: __init__.py  test_purity_checker.py
tools/: __init__.py  check_code.py  check_immutability.py  check_purity.py  check_pydantic_construction.py  check_pyproject.py  check_type_safety.py  regen_proto.py  run_tla.py
tools/purity/: __init__.py  classifier.py  config.py  messages.py  rules.py
typings/QuantLib/: __init__.pyi
typings/cupy/: __init__.pyi  cuda.pyi
typings/numba/: __init__.pyi
typings/safetensors/: torch.pyi
typings/scipy/: __init__.pyi
typings/torch/: __init__.py  __init__.pyi
(+80 files in other folders)
