[tool.poetry]
name = "spectralmc"
version = "0.0.1"
description = "GPU accelerated library for SDE simulation"
authors = ["tuee22"]

packages = [
  { include = "spectralmc" , from="python"}
]

[tool.poetry.dependencies]
python = ">=3.12.0,<3.13.0"

# Core libraries
numpy = ">=2.0.0,<3.0.0"
pandas = ">=2.0.0,<3.0.0"
pandas-stubs = ">=2.2.3,<3.0.0"
polars = ">=1.26.0,<2.0.0"
aiohttp = ">=3.8.0,<4.0.0"
aiofiles = ">=24.1.0,<25.0.0"
types-aiofiles = ">=24.1.0,<25.0.0"

# distributed compute
dask = { version = ">=2025.3.0,<2026.0.0", extras = ["complete"] }
ray = ">=2.44.1,<3.0.0"

# data clients
pulsar-client = ">=3.6.1,<4.0.0"
minio = ">=7.2.15,<8.0.0"
protobuf = ">=6.30.2,<7.0.0"

# numerical packages
scipy = ">=1.13.0,<2.0.0"
scikit-learn = ">=1.6.1,<2.0.0"
torch = ">=2.6.0,<3.0.0"
torchtyping = ">=0.1.5,<1.0.0"
cupy-cuda12x = ">=13.4.1,<14.0.0"
numba = ">=0.61.0,<1.0.0"
pystan = ">=3.10.0,<4.0.0"
pymc = ">=5.22.0,<6.0.0"
statsmodels = ">=0.14.4,<1.0.0"
QuantLib = ">=1.37.0,<2.0.0"

# Jupyter and visualization:
jupyterlab = ">=3.0.0,<4.0.0"
plotly = ">=6.0.1,<7.0.0"
matplotlib = ">=3.10.1,<4.0.0"
seaborn = ">=0.13.2,<1.0.0"

# python tools
mypy = ">=1.15.0,<2.0.0"
black = ">=25.1.0,<26.0.0"
pydantic = { version = ">=2.9.0,<3.0.0", extras = ["mypy"] }
pydantic_settings = ">=2.7.1,<3.0.0"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"