[tool.poetry]
name        = "spectralmc"
version     = "0.0.1"
description = "GPU-accelerated library for SDE simulation"
authors     = ["tuee22"]

packages = [
  { include = "spectralmc", from = "src" }
]

# --------------------------------------------------------------------------- #
#        P Y T O R C H   C U D A   1 2 . 8   W H E E L   S O U R C E          #
# --------------------------------------------------------------------------- #
[[tool.poetry.source]]
name     = "pytorch-cu128"
url      = "https://download.pytorch.org/whl/cu128"
priority = "explicit"   # only used when a dependency asks for it


# --------------------------------------------------------------------------- #
#                       R U N T I M E   D E P E N D E N C I E S               #
# --------------------------------------------------------------------------- #
[tool.poetry.dependencies]
python = ">=3.12,<3.13"

# ============================================================================
# PYTORCH SOURCE BUILD DEPENDENCIES
# These must be installed BEFORE building PyTorch from source
# ============================================================================
pyyaml            = ">=6.0,<7.0"
typing-extensions = ">=4.0,<5.0"
fastrlock         = ">=0.8,<1.0"
setuptools        = ">=68.0,<69.0"
wheel             = ">=0.41,<1.0"

# core
numpy          = ">=2.0,<3.0"
pandas         = ">=2.0,<3.0"
pandas-stubs   = ">=2.2.3,<3.0"
polars         = ">=1.26,<2.0"
pandera        = { version = ">=0.23.1,<1.0.0", extras = ["mypy","dask","polars"] }
aiohttp        = ">=3.8,<4.0"
aiofiles       = ">=24.1,<25.0"
types-aiofiles = ">=24.1,<25.0"

# distributed compute
dask = { version = ">=2025.3,<2026.0", extras = ["complete"] }
ray  = ">=2.44,<3.0"

# data clients
pulsar-client = ">=3.6,<4.0"
minio         = ">=7.2,<8.0"
protobuf      = ">=6.30,<7.0"
types-protobuf = ">=6.30,<7.0"
boto3         = ">=1.34.70,<2.0.0"
boto3-stubs   = ">=1.34.70,<2.0.0"
aioboto3      = ">=13.0,<14.0"
types-aiobotocore = { version = ">=2.13,<3.0", extras = ["s3"] }

# numerics
scipy            = ">=1.13,<2.0"
scikit-learn     = ">=1.6,<2.0"

# --- PyTorch 2.7.1 compiled for CUDA 12.8 (binary default) ----------------- #
# Note: Source builds (BUILD_FROM_SOURCE=true) use Dockerfile.source with PyTorch 2.4.1
torch            = { version = "2.7.1+cu128", source = "pytorch-cu128" }
safetensors      = ">=0.5.3,<1.0"
stable_baselines3 = ">=2.6,<3.0"
cupy-cuda12x     = ">=13.4,<14.0"
numba            = ">=0.61,<1.0"
pystan           = ">=3.10,<4.0"
pymc             = ">=5.22,<6.0"
statsmodels      = ">=0.14.4,<1.0"
QuantLib         = ">=1.37,<2.0"

# Jupyter / viz
plotly      = ">=6.0.1,<7.0"
matplotlib  = ">=3.10.1,<4.0"
seaborn     = ">=0.13.2,<1.0"
tensorboard = ">=2.19.0,<3.0"

# runtime typing / settings
pydantic           = { version = ">=2.9,<3.0", extras = ["mypy"] }
pydantic_settings  = ">=2.7,<3.0"

# testing & development
pytest           = ">=8.2,<9.0"
pytest-cov       = ">=5.0,<6.0"
pytest-asyncio   = ">=1.2.0,<2.0"
hypothesis       = ">=6.102,<7.0"
mypy             = ">=1.15,<2.0"
black            = ">=25.1,<26.0"
ruff             = ">=0.8.0"

# --------------------------------------------------------------------------- #
#                            S C R I P T S                                    #
# --------------------------------------------------------------------------- #
[tool.poetry.scripts]
# REQUIRED: All tests must run via poetry per CLAUDE.md
# Usage:
#   poetry run test-all              # Run all tests (CPU + GPU)
#   poetry run test-all <args>       # Forward args to pytest
# Examples:
#   poetry run test-all -v           # Verbose output
#   poetry run test-all -m gpu       # Only GPU tests
#   poetry run test-all tests/test_gbm.py::test_specific  # Specific test
test-all = "spectralmc.test_runner:run_all_tests"

# Code quality (Ruff + Black + MyPy)
# Usage: poetry run check-code
check-code = "tools.check_code:main"

# Type safety variants
typecheck = "tools.check_type_safety:run_mypy_only"
check-types = "tools.check_type_safety:main"
type-check-all = "tools.check_type_safety:run_full_check"

# --------------------------------------------------------------------------- #
#                               B U I L D                                     #
# --------------------------------------------------------------------------- #
[build-system]
requires      = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"


# --------------------------------------------------------------------------- #
#                       T O O L   C O N F I G U R A T I O N                   #
# --------------------------------------------------------------------------- #
[tool.mypy]
mypy_path = "stubs"
python_version = "3.12"
files = ["src/spectralmc", "tests", "tools"]
exclude = ["src/spectralmc/proto/.*_pb2\\.py$"]
plugins = ["pydantic.mypy"]

# Core strictness (equivalent to --strict --disallow-any-explicit)
strict = true
disallow_any_explicit = true

# Additional rigorous checks beyond --strict
disallow_any_unimported = true       # No Any from missing import stubs
disallow_any_decorated = true        # No Any from untyped decorators
disallow_any_generics = true         # No untyped generics
disallow_subclassing_any = true      # Can't inherit from Any
warn_unreachable = true              # Warn about unreachable code
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
extra_checks = true                  # Enable newer experimental checks

# Error reporting and display
show_error_context = true
show_column_numbers = true
show_error_codes = true
pretty = true
color_output = true

# Additional strictness
implicit_reexport = false
no_implicit_reexport = true
disallow_redefinition = true
strict_equality = true
strict_concatenate = true

# Performance and caching
incremental = true
cache_dir = ".mypy_cache"
sqlite_cache = true

# Disable warn_unreachable for tests (runtime assertions valuable even if statically guaranteed)
[[tool.mypy.overrides]]
module = "tests.*"
warn_unreachable = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = "tests"
addopts   = "-ra -q"
asyncio_mode = "auto"
markers   = ["asyncio: async test"]
filterwarnings = [
    # Hide SWIG-generated DeprecationWarnings raised while importing QuantLib
    # Pattern matches SWIG type definition warnings from <frozen importlib._bootstrap>
    # Module pattern restricts to importlib only (prevents accidentally hiding SpectralMC warnings)
    "ignore:builtin type .* has no __module__ attribute:DeprecationWarning:.*importlib.*",
    # Hide IFFT imaginary component warnings in tests (expected for untrained models)
    "ignore:IFFT imaginary component.*exceeds tolerance:RuntimeWarning",
    # Hide botocore datetime.utcnow() DeprecationWarnings (AWS SDK internal code, waiting for upstream fix)
    # See: https://github.com/boto/botocore/issues/3201
    "ignore::DeprecationWarning:botocore.*",
    "ignore::DeprecationWarning:aiobotocore.*",
    # Suppress Numba grid size warnings in tests (expected for small test datasets)
    # Production code uses large grids (524K blocks) without occupancy issues
    "ignore:Grid size.*will likely result in GPU under-utilization::numba.cuda.dispatcher",
]

# --------------------------------------------------------------------------- #
#                           B L A C K   C O N F I G                           #
# --------------------------------------------------------------------------- #
[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | src/spectralmc/proto
)/
'''

# --------------------------------------------------------------------------- #
#                           I S O R T   C O N F I G                           #
# --------------------------------------------------------------------------- #
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

# --------------------------------------------------------------------------- #
#                            R U F F   C O N F I G                            #
# --------------------------------------------------------------------------- #
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src/spectralmc", "tools", "tests"]

[tool.ruff.lint]
select = [
    "F",      # Pyflakes
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "S",      # flake8-bandit (security)
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "PT",     # flake8-pytest-style
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PL",     # Pylint
    "PERF",   # Perflint
    "RUF",    # Ruff-specific
]

ignore = [
    "E501",    # Line too long (Black handles this)
    "PLR0913", # Too many arguments (complex numerical APIs need this)
    "PLR0911", # Too many return statements (complex business logic)
    "PLR0912", # Too many branches (complex business logic)
    "PLR0915", # Too many statements (complex functions)
    "UP007",   # Non-PEP604 annotation union - auto-fix breaks MyPy sometimes
    "UP035",   # Deprecated imports - can cause runtime issues
    "UP040",   # TypeAlias using old syntax - Python 3.12 type keyword causes issues
    "UP046",   # Generic class using Generic[] - new syntax breaks some patterns
    "UP047",   # Generic function using TypeVar - new syntax breaks some patterns
    "S607",    # start-process-with-partial-path - intentional for poetry
    "S603",    # subprocess-without-shell-equals-true - we control the inputs
    "S101",    # assert - used for type narrowing and invariants
    "RET504",  # Unnecessary assignment before return - often clearer
    "SIM102",  # Collapsible if - sometimes less readable
    "SIM105",  # Suppressible exception - contextlib.suppress not always clearer
    "SIM117",  # Multiple with statements - often more readable separate
    "TC001",   # Typing-only first-party import - no TYPE_CHECKING policy
    "TC002",   # Typing-only third-party import - no TYPE_CHECKING policy
    "TC003",   # Typing-only standard library import - no TYPE_CHECKING policy
    "RUF005",  # Collection literal concatenation - [*a, *b] not always clearer
    "PLW1641", # eq-without-hash - dataclasses handle this
    "S110",    # try-except-pass - sometimes intentional silence
    "PERF401", # manual-list-comprehension - can be less readable
    "S324",    # hashlib-insecure-hash-function - used for checksums not security
    "RUF001",  # ambiguous-unicode-character-string - unicode is fine
    "RUF022",  # unsorted-dunder-all - order can be intentional
    "SIM108",  # if-else-block-instead-of-if-exp - ternary can be less readable
    "PLW0603", # global-statement - sometimes needed
    "RUF012",  # mutable-class-default - handled by dataclasses
    "SIM103",  # needless-bool - sometimes clearer
    "C416",    # unnecessary-comprehension - sometimes clearer
    "E722",    # bare-except - sometimes intentional (cleanup code)
    "B904",    # raise-without-from-inside-except - not always needed
    "E402",    # module-import-not-at-top-of-file - conditional imports
    "PLC0415", # import-outside-top-level - conditional imports
    "B007",    # unused-loop-control-variable - _ prefix handles it
    "PT013",   # pytest-incorrect-pytest-import - pytest style varies
    "A002",    # builtin-argument-shadowing - id, type common in domain
    "PLR2004", # magic-value-comparison - too noisy
    "ARG002",  # unused-method-argument - intentional for functional Result type
    "B028",    # no-explicit-stacklevel - not always needed
    "B905",    # zip-without-explicit-strict - strict=True is Python 3.10+
    "PLC0206", # dict-index-missing-items - iteration style varies
    "PT006",   # pytest-parametrize-names-wrong-type - string is fine
    "PT011",   # pytest-raises-too-broad - specific match not always needed
    "PT018",   # pytest-composite-assertion - complex assertions acceptable
    "B017",    # assert-raises-exception - sometimes correct exception unclear
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG001",  # Allow unused fixture arguments
    "S105",    # Allow hardcoded passwords (test credentials)
    "S106",    # Allow hardcoded password func args
]
"tools/**/*.py" = [
    "S105",    # Allow hardcoded passwords (demo mode)
    "S106",    # Allow hardcoded password func args
    "ARG001",  # Allow unused function arguments
]
"src/spectralmc/proto/**/*.py" = [
    "ALL",     # Ignore all rules for generated protobuf code
]

[tool.ruff.lint.isort]
force-single-line = false
lines-after-imports = 2
known-first-party = ["spectralmc", "tools"]
